changed self report text

--- a/app/src/main/res/layout/activity_self_report.xml
+++ b/app/src/main/res/layout/activity_self_report.xml
@@ -24,15 +24,16 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="322dp"
-        android:layout_height="137dp"
+        android:layout_width="341dp"
+        android:layout_height="184dp"
         android:layout_marginStart="44dp"
         android:layout_marginLeft="44dp"
         android:layout_marginTop="93dp"
         android:layout_marginEnd="45dp"
         android:layout_marginRight="45dp"
         android:layout_marginBottom="501dp"
-        android:text="TextView"
+        android:textSize="18dp"
+        android:text="Use this function to email your close contacts\n\n- Completely anonymous\n- Notifies close contacts in the past 2 weeks\n -Provides resources and quarantine tips to those affected"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
